# dmlxd

./: .gitignore  Cargo.toml  README  package.json
.github/workflows/: rust.yml
data/: config.yaml  main.db
src/: init.rs  main.rs
src/comms/: init_comm.rs
src/util/: register.rs  user.rs
tauri-app/src/: flow.js  index.html  main.js  register.js  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/data/: main.db
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: database.rs  init.rs  main.rs
tauri-app/src-tauri/src/comms/: init_comm.rs
tauri-app/src-tauri/src/util/: register.rs  timer.rs  user.rs
tauri-app/src/css/: app.css  style.css
tauri-app/src/first-launch/: register.html  signin.html
tauri-app/src/html/: app.html  signin.html
tauri-app/src/js/: register.js
