[package]
name = "dmlxd"
version = "0.1.0"
authors = ["Sinon <daviru007@icloud.com>", "Marcus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bcrypt = "0.14.0"
sodiumoxide = "0.2.6"
public-ip = "0.2.2"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.11"
env_logger = "0.10.0"