[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
serde_yaml = "0.9.17"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bcrypt = "0.14.0"
sodiumoxide = "0.2.6"
public-ip = "0.2.2"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.11"
env_logger = "0.10.0"

# Communcation
libp2p = "0.50.0"
futures = "0.3.16"
reqwest = "0.11.14"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

